@@ -114,16 +114,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
            option in the docs page, like e.g. we did for SSLInsecureRenegotiation.
     wrowe asks; you mean <Compatibility> tag?  Yes, of course.
 
-  *) mod_ldap: LDAP caching was suppressed (and ldap-status handler returns
-     title page only) when any mod_ldap directives were used in VirtualHost
-     context.
-     Trunk Patch: http://svn.apache.org/viewvc?rev=951235&view=rev (actual fix)
-                  http://svn.apache.org/viewvc?rev=951237&view=rev (error msg not displayed)
-     2.2.x patch: http://people.apache.org/~covener/2.2.x-ldap_serverconfig.diff
-         note: No actual per-server directives in 2.2.x mod_ldap, but per-directory 
-         mod_ldap directives under a virtualhost are sufficient to trigger this merge issue)
-     +1: covener, wrowe, trawick
-
   *) mod_proxy_ajp: Ensure that we only return a non fatal error if the request
      is idempotent and if we did not sent any request body so far.
       Trunk version of patch:
